Changelog
=========

2.0.2 - Unreleased
------------------
 - Stop stripping GMT when passed to widget display and replace dates
   that have "-" with "/" so the proper timezone is applied. See #11423
   [eleddy]

2.0.1 - 2011-01-03
------------------

- Use the FileUploadWidget from CMFDefault as the default widget for the
  FileUpload field from the same package (this was lost when CMFPlone
  started excluding CMFDefault's ZCML.)
  [davisagli]

2.0 - 2010-07-18
----------------

- Update license to GPL version 2 only.
  [hannosch]

2.0b6 - 2010-06-13
------------------

- Avoid deprecation warnings under Zope 2.13.
  [hannosch]

- Use the standard libraries doctest module.
  [hannosch]

- Explicitly load CMFCore's permissions and five.formlib ZCML.
  [hannosch]

- Updated to use five.formlib.
  [hannosch]

- Remove tabindex deprecated html attribute.
  [edegoute]

2.0b5 - 2010-04-10
------------------

- Make the date components view always represent the date in the local
  timezone.
  [davisagli]

2.0b4 - 2010-04-08
------------------

- Make sure that named template adapters use Chameleon-compatible templates
  if five.pt is present.  Closes http://dev.plone.org/plone/ticket/10103.
  [davisagli]

- Replace the required field indicator image with a unicode box.
  Refs http://dev.plone.org/plone/ticket/10352
  [davisagli, limi]

2.0b3 - 2010-03-05
------------------

- Decode form inputs before trying to do inline validation of them, the same
  way they would be in a real form submission. This closes
  http://dev.plone.org/plone/ticket/9757.
  [davisagli]

- Use the search text input as the target for the uberselection widget label.
  Fixes invalid HTML.
  [rossp]

- Fix invalid HTML by moving the xmlns declarations into a tag that will be
  omitted by TAL.
  [rossp]

2.0b2 - 2010-02-17
------------------

- Updated pageform.pt to follow recent markup conventions.
  References http://dev.plone.org/plone/ticket/9981.
  [spliter]
