@@ -96,5 +96,35 @@ for time here because it will break half of every year do to daylight savings.
   >>> parseDate(parts)
   (2011, '01', '13', '01', '30')
   
+While we are in here, let's fix this edge case as well. The date should 
+always round up to the next interval. There is the edge case of times that 
+are greater than the the last interval. Instead of  messing with logic about
+rounding to the next hour then the next day, etc, etc... let's just round down 
+to the last interval
+
+  >>> date = "2011/01/13 05:59 US/Pacific"
+  >>> parts = view.result(date=date)
+  >>> parseDate(parts)
+  (2011, '01', '13', '05', '55')
+  
+And some backwards compatibility checks
+
+  >>> date = "2011/01/13 05:55 US/Pacific"
+  >>> parts = view.result(date=date)
+  >>> parseDate(parts)
+  (2011, '01', '13', '05', '55')
+   
+  >>> parts = view.result(date="2011/01/13 05:47 US/Pacific")
+  >>> parseDate(parts)
+  (2011, '01', '13', '05', '50')
+  
+  >>> parts = view.result(date="2011/01/13 05:51 US/Pacific")
+  >>> parseDate(parts)
+  (2011, '01', '13', '05', '55')
+  
+  >>> parts = view.result(date="2011/01/13 06:00 US/Pacific")
+  >>> parseDate(parts)
+  (2011, '01', '13', '06', '00')
+  
   >>> DateTime.DateTime.localZone = realLocalZone
 
